Basic Components added- Header,footer,userPage and eventPage

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,56 @@
-.App {
+.header{  
+  position: fixed; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 10vh;
+  background-color: #EC2F3A;
+  color: white;
+  font-family: 'Molle', cursive;
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-weight: 10;
+  top: 0;
+  left:0;
+  width: 100vw;
+  
+}
+
+body{
+  background-color: #1D1D2C;
+  font-family: 'Lato', sans-serif;
+  color: white;
+
+}
+
+.footer{
+  background-color: #F5644A;
+  color:white ;
+  position: fixed;
   text-align: center;
+  font-family: 'Molle', cursive;
+  font-size: 1.25rem;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10vh; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+main{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top:20vh;
+  margin-bottom: 20vh;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.users-wrapper{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user{
+  display: flex;
+  flex-direction: row;
 }
