--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,11 @@
   left:0;
   width: 100vw;
 }
+
+h1{
+  font-family: 'Molle', cursive;
+  font-size: 3rem;
+}
 body{
   background-color: #1D1D2C;
   font-family: 'Lato', sans-serif;
@@ -85,4 +90,25 @@ button{
   width: 10vw;
   height: 4vh;
   margin: 1vh 1vw;
+}
+.loginForm{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.registrationForm
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+input{
+  margin: 1vh 1vw;
+}
+a :hover{
+  color: black;
+}
+span{
+  font-family: 'Molle', cursive;
+  font-size: 1.5rem;
 }
