--- a/client/src/App.css
+++ b/client/src/App.css
@@ -112,3 +112,40 @@ span{
   font-family: 'Molle', cursive;
   font-size: 1.5rem;
 }
+
+.categoriesContainer{
+  /* min-height: 100%; */
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.icon{
+  font-size: 2rem;
+}
+.row{
+ margin: 1vh 1vh;
+ display: flex;
+ justify-content: space-evenly;
+ flex-wrap: wrap;
+
+}
+.categoriesContainer a{
+  font-size: 1em;
+  width: 20vw; 
+  border: 0.01em solid white;
+ margin: 0.1vh 0.1vw;
+  padding:1vh 1vw;
+}
+
+.events-by-category{
+display: flex;
+}
+
+.events-by-category .event{
+  margin: 0px 2vw;
+}
+
+.events-by-category img{
+  width: 10vw;
+}
