--- a/client/src/App.css
+++ b/client/src/App.css
@@ -76,7 +76,11 @@ main{
   color: #1D1D2C;
   padding: 1vh 1vw;
 }
+nav{
+  display: flex;
+  justify-content: flex-end;
 
+}
 a{
   text-decoration: none;
   color:white;
@@ -91,7 +95,7 @@ a{
 }
 
 .event >img{
-  width: 50vw;
+  width: 15vw;
 }
 
 button{
@@ -132,20 +136,26 @@ span{
   flex-wrap: wrap;
 }
 .icon{
-  font-size: 2rem;
+  font-size: 3em;
 }
 .row{
  margin: 1vh 1vh;
  display: flex;
- justify-content: space-evenly;
+ justify-content: space-around;
  flex-wrap: wrap;
 
 }
 .categoriesContainer a{
-  font-size: 1em;
-  width: 20vw; 
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.5em;
+  width: 5vw; 
+  height: 5vh;
+  border-radius: 50%;
   border: 0.01em solid #1D1D2C;
- margin: 0.1vh 0.1vw;
+  margin: 0.1vh 0.1vw;
   padding:1vh 1vw;
   background-color: rgb(245, 167, 33);
   color: #1D1D2C;
@@ -162,3 +172,9 @@ display: flex;
 .events-by-category img{
   width: 10vw;
 }
+.upcoming-events{
+  text-align: center;
+  background-color: #FF9C5B;
+  margin: 10vh 10vw;
+}
+
