--- a/client/src/App.css
+++ b/client/src/App.css
@@ -141,7 +141,7 @@ span{
 .row{
  margin: 1vh 1vh;
  display: flex;
- justify-content: space-around;
+ justify-content: center;
  flex-wrap: wrap;
 
 }
@@ -155,7 +155,7 @@ span{
   height: 5vh;
   border-radius: 50%;
   border: 0.01em solid #1D1D2C;
-  margin: 0.1vh 0.1vw;
+  margin: 1vh 1vw;
   padding:1vh 1vw;
   background-color: rgb(245, 167, 33);
   color: #1D1D2C;
