--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
-.header{  
-  position: fixed; 
+.header{
+  position: fixed;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -36,7 +36,7 @@ body{
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 10vh; 
+  height: 10vh;
 }
 
 
@@ -151,7 +151,7 @@ span{
   justify-content: center;
   align-items: center;
   font-size: 0.5em;
-  width: 5vw; 
+  width: 5vw;
   height: 5vh;
   border-radius: 50%;
   border: 0.01em solid #1D1D2C;
@@ -177,6 +177,7 @@ display: flex;
   text-align: center;
   background-color: #FF9C5B;
   margin: 10vh 10vw;
+}
 
 .singleEv {
   margin: 2vw 50vw;
@@ -207,12 +208,12 @@ display: flex;
   display: flex;
   flex-direction: column;
 
-  
+
 }
 
 .centImg {
   align-content: center;
-  
+
   border: .5vw solid white;
 }
 
@@ -231,4 +232,3 @@ input {
   font-family: 'Bellefair', serif;
   font-size: 4vh;
 }
-
