--- a/client/src/App.css
+++ b/client/src/App.css
@@ -159,7 +159,7 @@ display: flex;
 }
 
 .evenImg {
-  height: 50vh;
+  width: 50vw;
 }
 
 .attend {
@@ -184,7 +184,7 @@ display: flex;
 
 .centImg {
   align-content: center;
-  
+  width: 50vw;
   border: .5vw solid white;
 }
 
@@ -197,7 +197,9 @@ input {
 }
 
 .userProf {
-  margin: 2vw 50vw;
+  display: flex;
+  flex-direction: row;
+  margin: 2vw 25vw;
   background-color: #FF9C5B;
   padding: 2.5vw;
   font-family: 'Bellefair', serif;
@@ -205,3 +207,24 @@ input {
   
 }
 
+  
+
+
+.userImg{
+  align-content: center;
+  width: 15vw;
+  border: .5vw solid white;
+}
+
+.profilePic{
+  padding: 1vw;
+  
+}
+
+.profileInfo {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  padding: 2vw;
+  font-size: 1vw;
+}
