--- a/client/src/App.css
+++ b/client/src/App.css
@@ -103,9 +103,7 @@ main{
   padding: 1vh 1vw;
  
 }
-img:hover{
-  opacity: 0.5;
-}
+
 .details{
   font-size: 1.25vw;
 }
@@ -136,7 +134,7 @@ p{
   margin: 0;
   font-size: 2vw;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 .user >img{
   width: 5vw;
@@ -181,7 +179,7 @@ input{
 
 .createForm input{
   background-color: white;
-  color: #1D1D2C;
+  /* color: #1D1D2C; */
 }
 a :hover{
   color:#F5644A;
@@ -297,6 +295,7 @@ justify-content: center;
 
 .tags {
   font-family: 'Notable', sans-serif;
+  font-size: 2vw;
 }
 
 .userProf {
@@ -338,33 +337,46 @@ label-text{
 display: flex;
 flex-direction: column;
 align-items: center;
-color: #1D1D2C
+/* color: #1D1D2C */
 }
 
 
 .form {
-  background-color: #f0a728;
+  /* background-color: #f0a728; */
   width: 40vw;
   margin: 3vw;
   padding: 2vw;
   border: .25vw solid white;
   font-family: 'Notable', sans-serif;
-  font-size: 1.25vw;
-  
+  font-size: 2vw;
+  background-image: url(http://thevibeguide.net/wp-content/uploads/2014/09/16-10-2013-Koen-Peters-Awakenings-Westergasfabriek-32.jpg);
+  background-attachment: fixed;
+  text-shadow: 5px  5px  white;
+  color: red;
 }
 
 .attendPic img {
   height: 10vh;
-  
+  border: .15vw solid white;
   
 }
 
 .attendPic {
   display: flex;
   
+  
 }
 
 .attendProf {
   text-align: center;
   border: .25vw solid white;
+  background-color: aqua;
 }
+
+.cent {
+  text-align: center;
+}
+
+/* label {
+  background-color: black;
+} */
