--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,6 +44,7 @@ body{
   left: 0;
   width: 100%;
   height: 10vh;
+  
 }
 
 
@@ -61,7 +62,7 @@ main{
 .user{
   display: flex;
   flex-direction: row;
-  border: 1px solid white;
+ 
   padding: 1vh 1vw;
 }
 .login{
@@ -96,7 +97,7 @@ main{
   display: flex;
   flex-direction: column;
   margin: 2vh 2vw;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   text-align: center;
   border: 1px solid #1D1D2C;
   background-color: rgb(238, 170, 67);
@@ -156,6 +157,7 @@ button{
   height: 4.5vh;
   border: .1vw solid white;
   margin: 1vh  1vw;
+  
   
 }
 .loginForm{
@@ -254,10 +256,12 @@ justify-content: center;
 
 .singleEv {
   margin: 2vw 50vw;
-  background-color: #FF9C5B;
+  /* background-color: #FF9C5B; */
+  background-color: #F5644A;
   padding: 2.5vw;
   font-family: 'Bellefair', serif;
   font-size: 4vh;
+  border: 4px solid white;
 }
 
 .evenImg {
@@ -266,8 +270,11 @@ justify-content: center;
 
 .attend {
   width: 45vw;
-  background-color: pink;
+  background-color: #FF9C5B;
   padding: 1vw;
+  border: 2px solid white;
+  
+  
 }
 
 .attendBut {
@@ -303,11 +310,13 @@ justify-content: center;
   display: flex;
   flex-direction: row;
   margin: 2vw 25vw;
-  background-color: #FF9C5B;
+  background-color: #F5644A;
   padding: 2.5vw;
-  font-family: 'Bellefair', serif;
+  /* font-family: 'Bellefair', serif; */
+  font-family: 'K2D', sans-serif;
   font-size: 4vh;
-  border: 2px solid white;
+  border: 4px solid white;
+  border-radius: 5px;
 }
 
   
@@ -348,18 +357,19 @@ align-items: center;
   width: 40vw;
   margin: 3vw;
   padding: 2vw;
-  border: .25vw solid white;
+  border: .25vw solid rgb(160, 147, 147);
   font-family: 'Notable', sans-serif;
   font-size: 2vw;
   background-image: url(http://thevibeguide.net/wp-content/uploads/2014/09/16-10-2013-Koen-Peters-Awakenings-Westergasfabriek-32.jpg);
   background-attachment: fixed;
-  text-shadow: 5px  5px  white;
-  color: red;
+  text-shadow: 5px  5px black;
+  color:#F5644A;
 }
 
 .attendPic img {
   height: 10vh;
   border: .15vw solid white;
+  margin: 1vw;
   
 }
 
@@ -371,14 +381,30 @@ align-items: center;
 
 .attendProf {
   text-align: center;
-  border: .25vw solid white;
-  background-color: aqua;
+  border: .1vw solid white;
+  background-color: white;
+  margin: 1vw;
+  border-radius: 5px;
 }
 
 .cent {
   text-align: center;
 }
 
+.event img {
+  border: .25vw solid white;
+}
+
+.linkWrap {
+  display: flex;
+  text-align: center; 
+  
+}
+
 /* label {
   background-color: black;
 } */
+
+span2 {
+  color: #EC2F3A
+}
